# e2openplugin-SeriesPlugin

./: README.md  configure.ac  de.mo
CONTROL/: conffiles  control
Proxy/: License.html  app.yaml  ga.php  license.php  mailer.php  phpliteadmin.php  proxy.php  testmailer.html
Proxy/GoogleAnalytics/: Tracker.php
etc/: seriesplugin.cfg  seriesplugin_channels.xml  seriesplugin_pattern_directories.json  seriesplugin_patterns.json
meta/: Makefile.am  plugin_seriesplugin.xml
po/: Makefile.am  SeriesPlugin.mo  SeriesPlugin.pot  de.mo  de.po  nl.mo  nl.po
src/: AutoTimer.py  AutoTimer_addAutoExcludeDescription.py  Cacher.py  CancelableThread.py  ChannelEditor.py  Channels.py  DirectoryPatterns.py  EpisodePatterns.py  FilePatterns.py  GuideBase.py  Helper.py  HelperGlobalCache.py  IdentifierBase.py  License.py  License.pyo  Logger.py  Makefile.am  Modules.py  SeriesPlugin.py  SeriesPluginBare.py  SeriesPluginConfiguration.py  SeriesPluginIndependent.py  SeriesPluginInfoScreen.py  SeriesPluginRenamer.py  SeriesPluginScreen.py  SeriesPluginTimer.py  SeriesServiceBase.py  TimeoutServerProxy.py  WebChannels.py  XMLFile.py  XMLTVBase.py  __init__.py  maintainer.info  plugin.py  seriesplugin_channels.xml  skin.xml  skinSetup.xml
src/Identifiers/: Fernsehserien.py  Fernsehserien.pyo  SerienServer.py  Wunschliste.py  Wunschliste.pyo  WunschlisteFeed.py  WunschlisteFeed.pyo
src/Images/: Makefile.am
src/SeriesServices/: Fernsehserien.de.py  Serienjunkies.py  Wunschliste.py
src/Skins/: ChannelEditor.xml  ChannelEditor_1080.xml  InfoScreen.xml  InfoScreenHD.xml  Setup.xml  (+4 more)
(+6 files in other folders)
