AC_INIT([enigma2-plugins],[5.9.1],[https://github.com/betonme/e2openplugin-SeriesPlugin/issues])
AM_INIT_AUTOMAKE([foreign])

AC_PATH_PROG(MSGFMT, msgfmt, AC_MSG_ERROR(Could not find msgfmt))
AM_PATH_PYTHON

AC_CONFIG_FILES([
Makefile
etc/Makefile
meta/Makefile
po/Makefile
src/Makefile
src/Identifiers/Makefile
src/Images/Makefile
src/Logos/Makefile
src/Skins/Makefile
])
AC_OUTPUT
